maze experiment and novelty search
redesign to centralize access to helpers (Context) and make
configuration simpler via interfaces. improved the trials output. added
the maze experiment and novelty search.

--- a/x/examples/maze/maze-nov-config.json
+++ b/x/examples/maze/maze-nov-config.json
@@ -1,8 +1,8 @@
 {
-    "AddConnProbability": 0.025,
-    "AddNodeProbability": 0.015,
-    "DelConnProbability": 0.025,
-    "DelNodeProbability": 0.015,
+    "AddConnProbability": 0.1,
+    "AddNodeProbability": 0.005,
+    "DelConnProbability": 0.1,
+    "DelNodeProbability": 0.005,
     "PruningPhaseThreshold": 30,
     "MaxMPCAge": 10,
     "MaxFitnessAge": 10,
@@ -11,27 +11,29 @@
     "DisjointCoefficient": 1,
     "EnableProbability": 0.2,
     "ExcessCoefficient": 1,
-    "ExperimentName": "ocr",
-    "FitnessType": 0,
+    "ExperimentName": "maze",
+    "FitnessType": 1,
     "HiddenActivation": 2,
     "InterspeciesMatingRate": 0.001,
-    "Iterations": 1000000,
+    "Iterations": 300,
     "MateByAveragingProbability": 0.4,
     "MaxStagnation": 15,
-    "MutateOnlyProbability": 0.25,
+    "MutateOnlyProbability": 0.3,
     "MutateSettingProbability": 0,
     "MutateTraitProbability": 0,
-    "MutateWeightProbability": 0.9,
+    "MutateWeightProbability": 0.6,
     "NetworkIterations": 2,
-    "NumInputs": 35,
-    "NumOutputs": 26,
+    "NumInputs": 10,
+    "NumOutputs": 2,
     "OutputActivation": 2,
-    "PopulationSize": 150,
+    "PopulationSize": 250,
     "ReplaceSettingProbability": 0,
     "ReplaceTraitProbability": 0,
     "ReplaceWeightProbability": 0.2,
-    "SurvivalThreshold": 0.2,
+    "SurvivalThreshold": 0.4,
     "TargetNumberOfSpecies": 15,
     "WeightCoefficient": 0.4,
-    "WeightRange": 2.5
+    "WeightRange": 2.5,
+    "NoveltyArchiveThreshold ": 6,
+    "NumNearestNeighbors": 15
 }
